--- a/releases.yml
+++ b/releases.yml
@@ -26,6 +26,7 @@ releases:
     base_release: v1.16.15-ci
     must: true
     patches:
+      - CVE-2020-8566.1.16
       - CVE-2021-3121
       # - CVE-2021-25741.1.18
       - nokmem.1.19
@@ -34,6 +35,7 @@ releases:
     base_release: v1.15.12-ci
     must: true
     patches:
+      - CVE-2020-8566.1.16
       - CVE-2020-8558
       - CVE-2020-8559
       - CVE-2021-3121
@@ -44,6 +46,7 @@ releases:
     base_release: v1.14.10-ci
     must: true
     patches:
+      - CVE-2020-8566.1.16
       - CVE-2020-8552.1.14
       - CVE-2020-8555.1.14
       - CVE-2020-8558
@@ -56,6 +59,7 @@ releases:
     base_release: v1.13.12-ci
     must: true
     patches:
+      - CVE-2020-8566.1.16
       - CVE-2020-8552.1.13
       - CVE-2020-8555.1.14
       - CVE-2020-8558
@@ -68,6 +72,7 @@ releases:
     base_release: v1.12.10-ci
     must: true
     patches:
+      - CVE-2020-8566.1.12
       - CVE-2019-11245
       - CVE-2019-11247
       - CVE-2019-11249.1.12
@@ -83,6 +88,7 @@ releases:
     base_release: v1.11.10-ci
     must: true
     patches:
+      - CVE-2020-8566.1.12
       - CVE-2019-11245
       - CVE-2019-11246.1.11
       - CVE-2019-11247.1.11
@@ -100,6 +106,7 @@ releases:
     base_release: v1.10.13-ci
     must: true
     patches:
+      - CVE-2020-8566.1.10
       - CVE-2019-11245
       - CVE-2019-1002101.1.10
       - CVE-2019-11246.1.10
@@ -438,6 +445,15 @@ patches:
   - name: CVE-2020-8566
     patch:
       - https://github.com/kubernetes/kubernetes/pull/95330.patch
+  - name: CVE-2020-8566.1.16
+    patch:
+      - patches/CVE-2020-8566.1.16.patch
+  - name: CVE-2020-8566.1.12
+    patch:
+      - patches/CVE-2020-8566.1.12.patch
+  - name: CVE-2020-8566.1.10
+    patch:
+      - patches/CVE-2020-8566.1.10.patch
 
   # CVSS Score 2.1, < k8s1.17, https://www.cvedetails.com/cve/CVE-2020-8565/
   # TODO
